--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,13 +4,13 @@ version: 0.2.0
 homepage: https://github.com/zesage/flutter_cube
 
 environment:
-  sdk: '>=2.15.0 <3.0.0'
+  sdk: '>=2.17.0 <3.0.0'
 
 dependencies: 
   flutter:
     sdk: flutter
   vector_math: any
-  image: 3.1.1
+  image: ^4.0.15
   path:
 
 dev_dependencies:
